--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,33 @@
     display: flex;
     margin-right: 26px;
 }
+.jobs-main-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.job-container{
+  margin: 40px 0px ;
+  position: relative;
+}
+.job-card{
+  width: 350px;
+  height: 228px;
+  background-color: var(--white);
+  border-radius: 6px;
+  padding: 49px 0px 36px 32px;
+}
+.company-logo{
+  position:absolute;
+  left: 32px;
+  top: -25px;
+  width: 50px;
+  height: 50px;
+  border-radius: 15px;
+  object-fit: contain;
+  background-color: var(--white);
+}
 /* Fonts */
 
 
